# ping0

./: .dockerignore  .env.example  .gitignore  BUILD_FIX.md  CHECKLIST.md  Cargo.toml  DEPLOYMENT.md  DEPLOY_FRONTEND.md  DEPLOY_VPS.md  Dockerfile  LICENSE  PRODUCTION_REPORT.md  README.md  docker-compose.yml
app/: Cargo.toml
app/src/: lib.rs
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
deploy/: install.sh
frontend/: Dockerfile  README.md  index.html  package.json  tsconfig.json
frontend/src/: App.css  App.tsx  styles.css
server/: Cargo.toml
server/src/: handlers.rs  lib.rs  main.rs  templates.rs
static/: config.json  index.html
