[package]
name = "ping0-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Disable leptos default features and expose CSR/SSR via this crate's features below.
leptos = { version = "0.2.5", default-features = false }
wasm-bindgen = "0.2"
gloo-net = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

[features]
# default to client-side rendering when this crate is built standalone (wasm)
default = ["csr"]
csr = ["leptos/csr"]
ssr = ["leptos/ssr"]
