[package]
name = "ping0-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
leptos = { version = "0.2", features = ["ssr", "stable"] }
leptos_axum = { version = "0.2", features = ["stable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrcode = "0.12"
uuid = { version = "1", features = ["v4"] }
anyhow = "1.0"
tower-http = { version = "0.5", features = ["fs"] }
