[package]
name = "ping0-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "=0.6.20", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrcode = "0.12"
uuid = { version = "1", features = ["v4"] }
anyhow = "1.0"
tower-http = { version = "0.3", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
