[package]
name = "ping0"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "=0.6.20", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrcode = "0.12"
uuid = { version = "1", features = ["v4"] }
anyhow = "1.0"
tower-http = { version = "0.3", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
askama = "0.12"
rusqlite = { version = "0.30" }
nanoid = "0.4"
mime_guess = "2.0"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
base64 = "0.21"
urlencoding = "2.1"
